--- a/k8s-manifests/mongodb-service.yml
+++ b/k8s-manifests/mongodb-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
-  namespace: murali-ns
+  namespace: rohan-ns
 spec:
   selector:
     app: mongodb
