--- a/k8s-manifests/mongodb-deployment.yml
+++ b/k8s-manifests/mongodb-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb
-  namespace: rohan-ns
+  namespace: murali-ns
 spec:
   replicas: 1
   selector:
