--- a/k8s-manifests/usernode-js-service.yml
+++ b/k8s-manifests/usernode-js-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: usernode-js-service
-  namespace: rohan-ns
+  namespace: murali-ns
 spec:
   type: LoadBalancer  # Use NodePort if LoadBalancer is not supported
   ports:
