--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,12 @@
-version: '3.8'
+services:
+  frontend-app:
+    build: . 
+    container_name: frontend-cont 
+    ports:
+      - '3130:3130'
+    depends_on:
+      - mongodb  
+    version: '3.8'
 
 services:
   frontend-app:
@@ -14,6 +22,41 @@ services:
       - PORT=3130
       - EMAIL_USER=chagantyteja2502@gmail.com
       - EMAIL_PASS=yxoq bjuk rdnt alzp
+  mongodb:
+    image: mongo:latest 
+    ports:
+      - '27017:27017'
+    networks:
+      - monitoring-net
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - '9090:9090'
+    networks:
+      - monitoring-net
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - '3000:3000'
+    environment:
+      - GF_SMTP_ENABLED=true
+      - GF_SMTP_HOST=smtp.gmail.com:587
+      - GF_SMTP_USER=rohankanhai51@gmail.com
+      - GF_SMTP_PASSWORD=dhkh otrz ajox yyxd
+      - GF_SMTP_SKIP_VERIFY=true
+        - GF_SMTP_FROM_ADDRESS=rohanpaul2026@gmail.com
+        - GF_SMTP_FROM_NAME=Grafana Alerts
+    networks:
+      - monitoring-net
+
+networks:
+  monitoring-net:
+    driver: bridge
   mongodb:
     image: mongo:latest 
     ports:
