--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,10 +46,10 @@ services:
     environment:
       - GF_SMTP_ENABLED=true
       - GF_SMTP_HOST=smtp.gmail.com:587
-      - GF_SMTP_USER=rohankanhai51@gmail.com
-      - GF_SMTP_PASSWORD=dhkh otrz ajox yyxd
+      - GF_SMTP_USER=rohanpaul2026@gmail.com
+      - GF_SMTP_PASSWORD=vzvr sqwh rerc kqjc
       - GF_SMTP_SKIP_VERIFY=true
-        - GF_SMTP_FROM_ADDRESS=rohanpaul2026@gmail.com
+        - GF_SMTP_FROM_ADDRESS=rohanpaul2012@gmail.com
         - GF_SMTP_FROM_NAME=Grafana Alerts
     networks:
       - monitoring-net
