--- a/k8s-manifests/usernode-js-service.yml
+++ b/k8s-manifests/usernode-js-service.yml
@@ -4,7 +4,7 @@ metadata:
   name: usernode-js-service
   namespace: rohan-ns
 spec:
-  type: NodePort  # Use NodePort if LoadBalancer is not supported
+  type: LoadBalancer  # Use NodePort if LoadBalancer is not supported
   ports:
     - port: 3130
       targetPort: 3130
