--- a/k8s-manifests/usernode-js-service.yml
+++ b/k8s-manifests/usernode-js-service.yml
@@ -4,10 +4,11 @@ metadata:
   name: usernode-js-service
   namespace: rohan-ns
 spec:
-  type: LoadBalancer  # Use NodePort if LoadBalancer is not supported
-  ports:
-    - port: 3130
-      targetPort: 3130
-      protocol: TCP
+  type: NodePort
   selector:
     app: userprofile
+  ports:
+    - protocol: TCP
+      port: 3130         # Port inside the cluster (service port)
+      targetPort: 3130   # Port on the pod (containerPort in Deployment)
+      nodePort: 30501   # NodePort (must be 30000–32767)
